--- a/src/main/res/layout-land/activity_main.xml
+++ b/src/main/res/layout-land/activity_main.xml
@@ -106,17 +106,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:hint="@string/hintET"
-                android:maxLength="25"
+                android:maxLength="100"
                 android:ems="10"
                 android:imeOptions="actionNext"
                 android:inputType="text"
                 android:textSize="16sp"
-
+                android:nextFocusRight="@id/etMark"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:gravity="center_vertical|center"></AutoCompleteTextView>
+                android:gravity="center_vertical|center" />
 
             <View android:id="@+id/fakeView"
                   android:layout_width="0dp"
@@ -134,7 +134,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/etMark"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:textStyle="bold" />
 
             <EditText
                 android:layout_height="40dp"
