--- a/src/main/res/layout-land/activity_splash.xml
+++ b/src/main/res/layout-land/activity_splash.xml
@@ -43,4 +43,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="(code)"
+        android:id="@+id/tv_code"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
