--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -43,30 +43,15 @@
         android:textColor="@android:color/black"
         android:textSize="17sp" />
 
-    <ProgressBar
-        android:id="@+id/pbSplash"
-        style="@style/ProgressBarSplash"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
     <TextView
-        android:id="@+id/tvSplashInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/tv_code"
+        android:text="(code)"
+        android:textAlignment="center"
+        android:textColor="@color/white"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:gravity="center"
-        android:text="∙∙∙"
-        android:textColor="@color/tableGrey"
-        android:textSize="70sp"
-        tools:ignore="HardcodedText" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
