--- a/src/main/res/layout/colmn_row.xml
+++ b/src/main/res/layout/colmn_row.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="normal|italic"
         android:gravity="center_vertical"
-        android:layout_height="35dp"
-        />
-
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:scrollHorizontally="true"
+        android:layout_weight="1"
+        android:layout_width="0dp" />
 
     <TextView
         android:id="@+id/mark"
         android:layout_width="0dp"
         android:layout_weight="0.4"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:layout_gravity="center"
         android:gravity="center_vertical"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:textStyle="normal|bold"
         android:textAlignment="center"/>
 
@@ -30,8 +31,9 @@
         android:layout_width="0dp"
         android:textStyle="normal|bold"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:layout_gravity="center"
         android:gravity="center_vertical"
-        android:layout_height="35dp" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
