--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -26,16 +26,15 @@
         android:id="@+id/etMark"
         android:layout_width="80dp"
         android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/etWeight"
-        android:layout_toStartOf="@+id/etWeight"
         android:hint="@string/mark"
         android:imeOptions="actionNext"
         android:inputType="numberDecimal"
         android:maxLength="3"
-        android:nextFocusForward="@id/etWeight"
         android:textAlignment="center"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/etWeight"
+        android:layout_toStartOf="@+id/etWeight" />
 
     <EditText
         android:id="@+id/etWeight"
